--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -12,11 +12,9 @@
       <source src="media/soundtrack.mp3" type="audio/mp3">
   </audio>
     <div id="container">
-      <img id="sprite1" src="media/roxas.gif">
-      <img id="sprite2" src="media/sora.gif">
-      <img id="blade1" src="media/key1.gif">
-      <img id="blade2" src="media/key2.gif">
-      <img id="blade3" src="media/key3.gif">
+      <img class="blade b1" src="media/key1.gif">
+      <img class="blade b2" src="media/key2.gif">
+      <img class="blade b3" src="media/key3.gif">
     </div>
 
     <!--<audio controls loop src="sound/backspace.mp3"></audio>*-->
